kubernetes/platform_data/hive.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore
  namespace: platform
spec:
  type: NodePort
  ports:
    - port: 9083
      nodePort: 31006
      name: thrift
  selector:
    app: hive-metastore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
  namespace: platform  # ⚠️ [สำคัญ] ต้องระบุ Namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-metastore
  template:
    metadata:
      labels:
        app: hive-metastore
    spec:
      containers:
        - name: hive-metastore
          image: starburstdata/hive:3.1.2-e.18
          ports:
            - containerPort: 9083
          livenessProbe:
            tcpSocket:
              port: 9083
            initialDelaySeconds: 60
            periodSeconds: 20
