kubernetes/platform_data/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace : platform

spec:
  type: NodePort
  ports:
    - port: 9000
      name: api
      nodePort: 31003 # External Access
    - port: 9001
      name: console
      nodePort: 31004 # External Access
  selector:
    app: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args: ["server", "--console-address", ":9001", "/data"]
          ports:
            - containerPort: 9000
            - containerPort: 9001
