kubernetes/platform_data/ingress_platform.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    # 1. Spark Master UI
    # - host: spark.localhost
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: spark-master-svc  
    #             port:
    #               number: 8080          

    - host: minio.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001         
    # 3. Trino UI
    - host: trino.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino-coordinator
                port:
                  number: 8080

    # 4. Jupyter Notebook
    - host: jupyter.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter-svc
                port:
                  number: 8888
